右クリック削除機能修正2

--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     <button id="add-btn" class="add-item-btn">＋ 項目追加</button>
   </div>
 
-  <script src="script.js"></script>
+  <script src="./script.js?v=2"></script>
 </body>
 </html>
