削除と名前変更モーダル追加

--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>スタンプカード</title>
   <link rel="stylesheet" href="./style.css?v=2">
-  </head>
+</head>
+
+<!-- アクションメニュー（削除／名前変更） -->
+<div id="action-menu" class="hidden">
+  <div class="menu-content">
+    <button id="rename-btn">名前を変更</button>
+    <button id="delete-btn">削除</button>
+    <button id="cancel-btn">キャンセル</button>
+  </div>
+</div>
+
 <body>
 
   <!-- ホーム画面 -->
