今度こそ青系にする

--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
   </div>
 
   <!-- スクリプト -->
-  <script src="script.js?v=6"></script>
+  <script src="script.js?v=6" defer></script>
 </body>
 </html>
