いろいろあったけどどうにか動くバージョン

--- a/index.html
+++ b/index.html
@@ -3,60 +3,49 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Study App</title>
-  <link rel="stylesheet" href="style.css?v=7">
+  <meta name="theme-color" content="#2196F3">
   <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#4da3ff">
-  <link rel="apple-touch-icon" href="icons/icon-192.png">
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js').then(() => {
-        console.log('Service Worker registered');
-      });
-    }
-  </script>
+  <link rel="stylesheet" href="style.css?v=11">
+  <title>学習管理アプリ</title>
 </head>
 <body>
-  <!-- 画面1: 科目一覧 -->
-  <div id="screen1" class="screen">
-    <h1>科目一覧</h1>
+  <!-- 画面1：科目一覧 -->
+  <div id="screen1">
     <div id="category-list" class="list"></div>
     <div class="bottom-buttons">
-      <button id="export-btn" class="action-btn">エクスポート</button>
-      <button id="import-btn" class="action-btn">インポート</button>
-      <input type="file" id="import-file" style="display:none">
-      <button id="add-category" class="floating-btn">＋</button>
+      <button id="export-btn" class="secondary-btn">エクスポート</button>
+      <button id="import-btn" class="secondary-btn">インポート</button>
+      <button id="add-category-btn" class="circle-btn">＋</button>
     </div>
   </div>
 
-  <!-- 画面2: 項目一覧 -->
-  <div id="screen2" class="screen hidden">
-    <h2 id="subject-title"></h2>
-    <ul id="item-list" class="list"></ul>
+  <!-- 画面2：項目一覧 -->
+  <div id="screen2" class="hidden">
+    <header>
+      <button id="back-btn" class="circle-btn">←</button>
+      <h2 id="subject-title"></h2>
+    </header>
+    <div id="item-list" class="list"></div>
     <div class="bottom-buttons">
-      <button id="back-btn" class="action-btn">戻る</button>
-      <button id="add-item" class="floating-btn">＋</button>
+      <button id="add-item-btn" class="circle-btn">＋</button>
     </div>
   </div>
-
-  <!-- オーバーレイ -->
-  <div id="menu-overlay" class="hidden"></div>
 
   <!-- 科目用メニュー -->
-  <div id="action-menu" class="menu hidden">
-    <button id="rename-category" class="menu-option">名前を変更</button>
-    <button id="delete-category" class="menu-option">削除</button>
-    <button id="cancel-action" class="menu-option">キャンセル</button>
+  <div id="category-action-menu" class="action-menu">
+    <button id="rename-category-btn">名前変更</button>
+    <button id="delete-category-btn">削除</button>
+    <button id="cancel-category-btn">キャンセル</button>
   </div>
 
   <!-- 項目用メニュー -->
-  <div id="item-action-menu" class="menu hidden">
-    <button id="move-up" class="menu-option">上へ</button>
-    <button id="move-down" class="menu-option">下へ</button>
-    <button id="delete-item" class="menu-option">削除</button>
-    <button id="cancel-item-action" class="menu-option">キャンセル</button>
+  <div id="item-action-menu" class="action-menu">
+    <button id="move-up-btn">上へ</button>
+    <button id="move-down-btn">下へ</button>
+    <button id="delete-item-btn">削除</button>
+    <button id="cancel-item-btn">キャンセル</button>
   </div>
 
-  <script src="script.js?v=7" defer></script>
+  <script src="script.js?v=11" defer></script>
 </body>
 </html>
