三点リーダー問題とか諸々

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   <div id="item-action-menu" class="action-menu">
     <button id="move-up-btn">上へ</button>
     <button id="move-down-btn">下へ</button>
+    <button id="rename-item-btn">名前変更</button>
     <button id="delete-item-btn">削除</button>
     <button id="cancel-item-btn">キャンセル</button>
   </div>
