科目も入れ替え可能に

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="style.css?v=11">
   <title>学習管理アプリ</title>
 </head>
-
 <body>
   <!-- 画面1：科目一覧 -->
   <div id="screen1">
@@ -34,6 +33,8 @@
 
   <!-- 科目用メニュー -->
   <div id="category-action-menu" class="action-menu">
+    <button id="move-category-up-btn">上へ</button>
+    <button id="move-category-down-btn">下へ</button>
     <button id="rename-category-btn">名前変更</button>
     <button id="delete-category-btn">削除</button>
     <button id="cancel-category-btn">キャンセル</button>
@@ -51,4 +52,3 @@
   <script src="script.js?v=11" defer></script>
 </body>
 </html>
-
