メニューの出方とデザイン修正

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </div>
 
   <!-- 科目用メニュー -->
-  <div id="category-action-menu" class="action-menu">
+  <div id="category-action-menu" class="action-menu bottom-sheet">
     <button id="move-category-up-btn">上へ</button>
     <button id="move-category-down-btn">下へ</button>
     <button id="rename-category-btn">名前変更</button>
@@ -41,13 +41,14 @@
   </div>
 
   <!-- 項目用メニュー -->
-  <div id="item-action-menu" class="action-menu">
+  <div id="item-action-menu" class="action-menu bottom-sheet">
     <button id="move-up-btn">上へ</button>
     <button id="move-down-btn">下へ</button>
     <button id="rename-item-btn">名前変更</button>
     <button id="delete-item-btn">削除</button>
     <button id="cancel-item-btn">キャンセル</button>
   </div>
+
 
   <script src="script.js?v=11" defer></script>
 </body>
