--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <div id="screen1">
     <div id="category-list" class="list"></div>
     <div class="bottom-buttons">
+      <button id="csv-export-btn" class="secondary-btn">CSV書き出し</button>
+      <button id="csv-import-btn" class="secondary-btn">CSV読み込み</button>
       <button id="export-btn" class="secondary-btn">エクスポート</button>
       <button id="import-btn" class="secondary-btn">インポート</button>
       <button id="add-category-btn" class="circle-btn">＋</button>
