csv読み込みボタン修正

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
     <button id="cancel-item-btn">キャンセル</button>
   </div>
 
+  <!-- CSV読み込み用の非表示ファイル入力 -->
+  <input type="file" id="hidden-file-input" accept=".csv,text/csv,text/plain" style="display: none;" />
 
   <script src="script.js?v=11" defer></script>
 </body>
