csv読み込みボタン再再修正

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
   </div>
 
   <!-- CSV読み込み用の非表示ファイル入力 -->
-  <input type="file" id="hidden-file-input" accept=".csv,text/csv,text/plain" style="display: none;" />
+    <input type="file" id="hidden-file-input"
+       accept=".csv,text/csv,text/plain,application/vnd.ms-excel"
+       style="display: none;" />
+
 
   <script src="script.js?v=11" defer></script>
 </body>
