jsonエクスポートを戻す

--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
   <div id="screen1">
     <div id="category-list" class="list"></div>
     <div class="bottom-buttons">
+      <button id="add-category-btn" class="circle-btn">＋</button>
       <button id="csv-export-btn" class="secondary-btn">CSV書き出し</button>
       <button id="csv-import-btn" class="secondary-btn">CSV読み込み</button>
-      <!--
       <button id="export-btn" class="secondary-btn">エクスポート</button>
       <button id="import-btn" class="secondary-btn">インポート</button>
-      -->
-      <button id="add-category-btn" class="circle-btn">＋</button>
     </div>
   </div>
 
@@ -53,11 +51,11 @@
     <button id="cancel-item-btn">キャンセル</button>
   </div>
 
-  <!-- CSV読み込み用の非表示ファイル入力 -->
+  <!-- CSV読み込み用の非表示ファイル入力 
     <input type="file" id="hidden-file-input"
        accept=".csv,text/csv,text/plain,application/vnd.ms-excel"
        style="display: none;" />
-
+  -->
 
   <script src="script.js?v=11" defer></script>
 </body>
