--- a/index.html
+++ b/index.html
@@ -9,17 +9,25 @@
   <title>学習管理アプリ</title>
 </head>
 <body>
+
   <!-- 画面1：科目一覧 -->
   <div id="screen1">
     <div id="category-list" class="list"></div>
-    <div class="bottom-buttons">
+  
+    <!-- 上部に配置する＋ボタン -->
+    <div class="top-button">
       <button id="add-category-btn" class="circle-btn">＋</button>
+    </div>
+  
+    <!-- 下部に配置するインポート・エクスポートボタン -->
+    <div class="bottom-buttons">
       <button id="csv-export-btn" class="secondary-btn">CSV書き出し</button>
       <button id="csv-import-btn" class="secondary-btn">CSV読み込み</button>
       <button id="export-btn" class="secondary-btn">エクスポート</button>
       <button id="import-btn" class="secondary-btn">インポート</button>
     </div>
   </div>
+
 
   <!-- 画面2：項目一覧 -->
   <div id="screen2" class="hidden">
