plus button float

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </header>
     <div id="item-list" class="list"></div>
     <div class="bottom-buttons">
-      <button id="add-item-btn" class="circle-btn">＋</button>
+      <button id="add-item-btn" class="circle-btn screen2-btn">＋</button>
     </div>
   </div>
 
@@ -59,11 +59,7 @@
     <button id="cancel-item-btn">キャンセル</button>
   </div>
 
-  <!-- CSV読み込み用の非表示ファイル入力 
-    <input type="file" id="hidden-file-input"
-       accept=".csv,text/csv,text/plain,application/vnd.ms-excel"
-       style="display: none;" />
-  -->
+
 
   <script src="script.js?v=11" defer></script>
 </body>
